# 445M_Networking

./: .gitignore  README.md  log.txt  proposal.typ
MZ-WILC1000/firmware/src/wilc1000/driver/source/: nmspi.c
hw/: ATWILC1000_Breakout.kicad_pcb  ATWILC1000_Breakout.kicad_pro  ATWILC1000_Breakout.kicad_sch  fp-lib-table  sym-lib-table
hw/ATWILC1000B-MU-Y/: ATWILC1000B-MU-Y.dcm  ATWILC1000B-MU-Y.kicad_sym  ATWILC1000B-MU-Y.lib  ATWILC1000B-MU-Y.mod  ATWILC1000B-MU-Y.stp  QFN40P500X500X100-41N-D.kicad_mod
hw/LIB_ATWILC1000-MR110PB-T/: ATWILC1000MR110PBT.kicad_mod
sw/: CMakeLists.txt  Makefile  build.sh  c_cpp_properties.json  compile_commands.json  dump.txt  flash.sh  log.txt  logfile  monitor.sh  outbytes.pcap  outbytes.txt  run.sh  settings.json
sw/FreakyRTOS/: FIFOsimple.h  Interpreter.c  OS.c  OS.h  OS_Fifo.c  OS_Heap.c  OS_Lists.c  ST7735.c  tlsf.c
sw/FreakyRTOS/ELF_Utils/: loader.c
sw/FreakyRTOS/OS_CLI_Commands/: cat.c  cd.c  exec.c  ls.c  mkdir.c  mkfs.c  mount.c  pwd.c  rm.c  touch.c  umount.c  write.c
sw/FreakyRTOS/heapTesting_offchip/: heap.c
sw/FreakyRTOS/unity/: unity.c
sw/deported/bsp/: nm_bsp.h
sw/deported/common/: nm_common.h
sw/deported/driver/include/: m2m_periph.h
sw/deported/driver/source/: m2m_periph.c  m2m_wifi.c  nmasic.c  nmasic.h  nmdrv.c  nmi2c.h  nmsdio.h
sw/driverlib/: CMakeLists.txt
sw/gcc-files/: startup_gcc.c
sw/inc/: CMakeLists.txt  ST7735.c  UART.c  UART.h
sw/lib/std/nanoprintf/: printf.h  wrapper_nanoprintf.c
sw/lib/std/printf/: CMakeLists.txt  printf.c  printf.h
sw/lib/std/stdio_lite/: stdio_lite.c  stdio_lite.h
sw/lib/std/string_lite/: string_lite.c  string_lite.h
sw/nm/: CMakeLists.txt  conf_wilc.h  nm_bsp.c  nm_bsp.h  nm_bus_wrapper.c  nm_bus_wrapper.h  nm_common.c
sw/nm/bsp/: nm_bsp.c  nm_bsp.h  nm_tm4c.h
sw/nm/bsp/include/: nm_bsp.h
sw/nm/bsp/source/: nm_bsp.c
sw/nm/bus_wrapper/: nm_bus_wrapper.c  nm_bus_wrapper.h
sw/nm/bus_wrapper/include/: nm_bus_wrapper.h
sw/nm/bus_wrapper/source/: nm_bus_wrapper.c
sw/nm/common/: nm_common.c
sw/nm/common/include/: nm_common.h
sw/nm/driver/include/: m2m_ota.h  m2m_types.h  m2m_wifi.h
sw/nm/driver/source/: m2m_coex.c  m2m_hif.c  m2m_hif.h  m2m_wifi.c  nmbus.h  nmdrv.c  nmdrv.h  nmsdio.c  nmspi.c  nmspi.h  nmuart.h  spi_flash.c
sw/src/: DHCP.c  ICMP.c  ICMP.h  Networking.c  Networking.h  Networking_Globs.c  Networking_Globs.h  UDP.c  UDP.h  arp.c  arp.h  dhcp_client.c  dhcp_client.h  internet_checksum.c  ip.c  ip.h  mac.c  mac.h  main.c  main.h  ping.c  ping.h  userApp_udp.c  userApp_udp.h
sw/temp/: echoreq.pcap  inbytes.pcap  inbytes.txt  inbytes_raw.txt
sw/tempdir/: echoreq.pcap  echoreq.txt
sw/testingProtocol/: Makefile  Networking_Globs.h  dummy.py  ip.c  mac.c  mac.h  main.c  outbytes.pcap  run.sh  stubs.c  stubs.h
sw/testingProtocol/.cache/clangd/index/: Networking_Globs.c.7E495CF54ED5B953.idx  Networking_Globs.h.3F3D2ADD7AD98C44.idx  ip.c.010289184C635067.idx  ip.h.2F7CCCB0313049A8.idx  stubs.h.8EA7A4F83F553860.idx
sw/wilc/bsp/source/: nm_bsp_tm4c.c
sw/wilc/bus_wrapper/source/: nm_bus_wrapper_tm4c.c
sw/wilc/common/include/: nm_common.h
sw/wilc/driver/source/: m2m_hif.c  m2m_wifi.c  nmasic.c  nmdrv.c  nmspi.c
sw/wilc/wilc1000_module_config/tm4c/: conf_wilc.h
testingProtocol/: Makefile  Networking.h  Networking_Globs.c  Networking_Globs.h  UDP.h  ip.c  mac.c  mac.h  main.c  outbytes.pcap  outbytes.txt  run.sh  stubs.c  stubs.h
testingProtocol/.cache/clangd/index/: Networking.h.216655919742AEC7.idx  Networking_Globs.c.7E495CF54ED5B953.idx  Networking_Globs.h.3F3D2ADD7AD98C44.idx  mac.c.BA710F0DF9E7D4FE.idx  mac.h.CC6D5101E6AF48C0.idx  main.c.52833228507D9704.idx  stubs.c.E2ED788A4447555D.idx
